--- a/lib/install
+++ b/lib/install
@@ -88,4 +88,9 @@ fi
 " > bash.bashrc
 
 mv bash.bashrc $PREFIX/etc
-echo installed successfully exiting termux open it again...
+
+echo -e "Please press Return when you are ready to install the Termux-x11 apk. Press Enter to continue..."
+read
+am start -a android.intent.action.VIEW -d https://github.com/termux/termux-x11/releases/download/nightly/app-universal-debug.apk
+
+echo installed successfully. Please exit termux and open it again...
